--- a/log_in.html
+++ b/log_in.html
@@ -45,7 +45,7 @@ button {
 </style>   
 </head>    
 <body>    
-    <center> <h1> Student Login Form </h1> </center>   
+    <center> <h1> Foodgiver Login</h1> </center>   
     <form>  
         <div class="container">   
             <label>Username : </label>   
